# codecrafters-http-server-python

./: README.md  pyproject.toml  your_program.sh
.codecrafters/: run.sh
app/: main.py
src/http_server/: __init__.py  __main__.py
src/http_server/app/: app.py  routes.py
src/http_server/http_utils/: http_header.py  http_request.py
