[project]
name = "codecrafters-http-server-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Wojciech Piotr Gula", email = "gulasz101@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
http-server = "http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/http_server"]




